Updates to adding and removing families

--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" type="text/css" href="/static/controlpanel.css">
         <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://cdn.rawgit.com/ErikGartner/dTree/2.0.0/dist/dTree.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
         <div class="headerContainer">
@@ -29,8 +32,8 @@
                 </div>
             </div>
             <div class="buttonContainer">
-                <button id="removeBtn" class="Btn">Remove Treehouse</button><br>
                 <button id="addBtn" class="Btn">Add Treehouse</button><br>
+                <button id="removeBtn" class="Btn">Remove Treehouse</button><br>
                 <button class="Btn" onclick="logout()">Logout</button>
             </div>
         </div>
