--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -23,7 +23,7 @@
 
         <div class="center">
             <div class="treePanel">
-              <div id="graph"></div>                <!-- if we can get the footer stuck to bottom, no need for height-->
+              <div id="graph"></div>
             </div>
         </div>
 
