--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -187,7 +187,7 @@
                 if (node.gender == 'm')
                 {
                 	//opens spouse node info if spouse is female
-    	   			familyTreeString.append("marriages: [{\"spouse\": { \"name\": \"" + node.spouse + "\",\"class\": \"woman\"}")
+    	   			familyTreeString.append("marriages: [{\"spouse\": { \"name\": \"" + node.spouse + "\",\"class\": \"woman\"},")
     	   			unclosedMarriage = true;
     	   		}
     	   		else if (node.gender == 'f')
