--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -4,8 +4,8 @@
         <title>{{ familyName }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="regions_update.css">
-        <link rel="stylesheet" type="text/css" href="ModelBox.css">
+        <link rel="stylesheet" type="text/css" href="/static/regions_update.css">
+        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
         <script src="static/regions.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
