Changed background color since it was hard to see lines connecting nodes.

--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -4,8 +4,8 @@
         <title>{{ familyName }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="/static/regions_update.css">
-        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">				<!-- change back to "/static/ModelBox.css" -->
+        <link rel="stylesheet" type="text/css" href="regions_update.css">
+        <link rel="stylesheet" type="text/css" href="ModelBox.css">				<!-- change back to "/static/ModelBox.css" -->
         <script src="static/regions.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
@@ -23,7 +23,7 @@
 
         <div class="center">
             <div class="treePanel">
-              <div id="graph"></div>
+              <div id="graph" style="background: rgba(255, 255, 255, 1);"></div>
             </div>
         </div>
 
