image of tree maybe...
function in comments that could possibly be for image generation

--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -201,5 +201,31 @@
 		treeData = treeToBeDrawn;
 		refreshGraph();
 	}
+	
+	    /* function possibly can be used to generate an image for the tree
+source:  http://stackoverflow.com/questions/27230293/how-to-convert-svg-to-png-using-html5-canvas-javascript-jquery-and-save-on-serve
+
+    function drawInlineSVG(ctx, rawSVG, callback) {
+
+    var svg = new Blob([rawSVG], {type:"image/svg+xml;charset=utf-8"}),
+        domURL = self.URL || self.webkitURL || self,
+        url = domURL.createObjectURL(svg),
+        img = new Image;
+
+    img.onload = function () {
+        ctx.drawImage(this, 0, 0);     
+        domURL.revokeObjectURL(url);
+        callback(this);
+    };
+
+    img.src = url;
+}
+
+// usage:
+drawInlineSVG(ctxt, svgText, function() {
+    console.log(canvas.toDataURL());  // -> PNG data-uri
+});
+*/
+	    
     </script>
 </html>
