--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -202,28 +202,35 @@
 		refreshGraph();
 	}
 	
-	    /* function possibly can be used to generate an image for the tree
-source:  http://stackoverflow.com/questions/27230293/how-to-convert-svg-to-png-using-html5-canvas-javascript-jquery-and-save-on-serve
+/*
+ //http://stackoverflow.com/questions/27230293/how-to-convert-svg-to-png-using-html5-canvas-javascript-jquery-and-save-on-serve
+ //http://jsfiddle.net/epistemex/xfh7nctk/23/
+var svgText = document.getElementsByTagName("svg");
+var myCanvas = document.getElementById("canvas");
+var ctxt = myCanvas.getContext("2d");
 
-    function drawInlineSVG(ctx, rawSVG, callback) {
+function drawInlineSVG(ctx, rawSVG, callback) {
 
-    var svg = new Blob([rawSVG], {type:"image/svg+xml;charset=utf-8"}),
-        domURL = self.URL || self.webkitURL || self,
-        url = domURL.createObjectURL(svg),
-        img = new Image;
+  var svg = new Blob([rawSVG], {
+      type: "image/svg+xml;charset=utf-8"
+    }),
+    domURL = self.URL || self.webkitURL || self,
+    url = domURL.createObjectURL(svg),
+    img = new Image;
 
-    img.onload = function () {
-        ctx.drawImage(this, 0, 0);     
-        domURL.revokeObjectURL(url);
-        callback(this);
-    };
+  img.onload = function() {
+    ctx.drawImage(this, 0, 0);
+    domURL.revokeObjectURL(url);
+    callback(this);
+  };
 
-    img.src = url;
+  img.src = url;
 }
 
 // usage:
 drawInlineSVG(ctxt, svgText, function() {
-    console.log(canvas.toDataURL());  // -> PNG data-uri
+  console.log(canvas.toDataURL()); // -> PNG
+  alert("see console for output...");
 });
 */
 	    
